[package]
name = "doorcash"
version = "0.1.0"
description = "DoorCash — provably fair on-chain elimination game"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "doorcash"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
solana-sha256-hasher = "2.3.0"
